@@ -1,6 +1,7 @@
 <?php
 /* $Id$ */
 include_once 'includes/init.php';
+require_valide_referring_url ();
 
 $icon_max_size = '3000';
 $icon_path = 'icons/';
