@@ -2,6 +2,8 @@
 /* $Id$ */
 include_once 'includes/init.php';
 
+require_valide_referring_url ();
+
 $id = getGetValue ( 'id' );
 
 if ( $ALLOW_VIEW_OTHER != 'Y' || empty ( $id ) ) {
