@@ -11,6 +11,7 @@
  * @version $Id$
  */
 include_once 'includes/init.php';
+require_valide_referring_url ();
 
 $error = '';
 
